--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend-nestjs",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "CRUD in Nest JS",
+  "author": "Andres Fernandez",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -51,7 +51,6 @@
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
