--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,23 @@ services:
       - '5050:80'
     volumes:
       - ./pgadmin_data:/var/lib/pgadmin
+
+  mysql:
+    image: mysql:5
+    environment:
+      - MYSQL_DATABASE=my_db
+      - MYSQL_USER=andres
+      - MYSQL_PASSWORD=123456
+      - MYSQL_ROOT_PASSWORD=123456
+    ports:
+      - '3307:3306'
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - PMA_HOST=mysqlcali
+    ports:
+      - '8080:80'
